[B]0.8.3[/B]
- initial Release for XBMC