@@ -1,2 +1,5 @@
+[B]0.9.0[/B]
+- update to upstream version: validictory 0.9.0
+
 [B]0.8.3[/B]
 - initial Release for XBMC
